Fix spacings

--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -9,52 +9,52 @@ body {
 
 h1:not(.u-reset), .h1 {
     @include Headline1;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 h2:not(.u-reset), .h2 {
     @include Headline2;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 h3:not(.u-reset), .h3 {
     @include Headline3;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 h4:not(.u-reset), .h4 {
     @include Headline4;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 h5:not(.u-reset), .h5 {
     @include Headline5;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 h6:not(.u-reset), .h6 {
     @include Headline6;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 .subtitle1 {
     @include Subtitle1;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 .subtitle2 {
     @include Subtitle2;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 p:not(.u-reset), span:not(.u-reset), .body1 {
     @include Body1;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 .body2 {
     @include Body2;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 button:not(.u-reset), .button {
@@ -63,10 +63,10 @@ button:not(.u-reset), .button {
 
 .caption {
     @include Caption;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
 
 .overline {
     @include Overline;
-    margin-bottom: var(--root-spacing);
+    //margin-bottom: var(--root-spacing);
 }
